cmd/pkg/ingestor/suite/testdata/multiple-tests-for-one-constraint/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-example
  namespace: default
  labels:
    label-example: example
spec:
  containers:
  - name: nginx
    image: nginx
